# claude-code-log-tools

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: DESIGN.md
notebooks/: 01_import_logs.ipynb  natural-language-query.ipynb
plan/: claude_logs_postgres_guide.md  progress-2025-12-22.md  progress-2026-02-15.md
src/claude_code_log_tools/: __init__.py  schema.py
